; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_fdfs_server_id_func.c_fdfs_get_storage_ids_from_tracker_group.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_fdfs_server_id_func.c_fdfs_get_storage_ids_from_tracker_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32* }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fdfs_get_storage_ids_from_tracker_group(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %8, i32** %5, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %14, i64 %18
  store i32* %19, i32** %7, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp sge i32 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %1
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  %29 = load i32, i32* %10, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  store i32* %31, i32** %6, align 8
  br label %36

32:                                               ; preds = %1
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 2
  %35 = load i32*, i32** %34, align 8
  store i32* %35, i32** %6, align 8
  br label %36

36:                                               ; preds = %32, %25
  %37 = load i32, i32* @ENOENT, align 4
  store i32 %37, i32* %9, align 4
  store i32 0, i32* %11, align 4
  br label %38

38:                                               ; preds = %75, %36
  %39 = load i32, i32* %11, align 4
  %40 = icmp slt i32 %39, 5
  br i1 %40, label %41, label %78

41:                                               ; preds = %38
  %42 = load i32*, i32** %6, align 8
  store i32* %42, i32** %4, align 8
  br label %43

43:                                               ; preds = %60, %41
  %44 = load i32*, i32** %4, align 8
  %45 = load i32*, i32** %7, align 8
  %46 = icmp ult i32* %44, %45
  br i1 %46, label %47, label %63

47:                                               ; preds = %43
  %48 = load i32*, i32** %5, align 8
  %49 = load i32*, i32** %4, align 8
  %50 = call i32 @memcpy(i32* %48, i32* %49, i32 4)
  %51 = load i32*, i32** %5, align 8
  %52 = call i32 @fdfs_server_sock_reset(i32* %51)
  %53 = load i32*, i32** %5, align 8
  %54 = call i32 @fdfs_get_storage_ids_from_tracker_server(i32* %53)
  store i32 %54, i32* %9, align 4
  %55 = load i32, i32* %9, align 4
  %56 = icmp eq i32 %55, 0
  br i1 %56, label %57, label %59

57:                                               ; preds = %47
  %58 = load i32, i32* %9, align 4
  store i32 %58, i32* %2, align 4
  br label %80

59:                                               ; preds = %47
  br label %60

60:                                               ; preds = %59
  %61 = load i32*, i32** %4, align 8
  %62 = getelementptr inbounds i32, i32* %61, i32 1
  store i32* %62, i32** %4, align 8
  br label %43

63:                                               ; preds = %43
  %64 = load i32*, i32** %6, align 8
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %66 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i32 0, i32 2
  %67 = load i32*, i32** %66, align 8
  %68 = icmp ne i32* %64, %67
  br i1 %68, label %69, label %73

69:                                               ; preds = %63
  %70 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %71 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %70, i32 0, i32 2
  %72 = load i32*, i32** %71, align 8
  store i32* %72, i32** %6, align 8
  br label %73

73:                                               ; preds = %69, %63
  %74 = call i32 @sleep(i32 1)
  br label %75

75:                                               ; preds = %73
  %76 = load i32, i32* %11, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* %11, align 4
  br label %38

78:                                               ; preds = %38
  %79 = load i32, i32* %9, align 4
  store i32 %79, i32* %2, align 4
  br label %80

80:                                               ; preds = %78, %57
  %81 = load i32, i32* %2, align 4
  ret i32 %81
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @fdfs_server_sock_reset(i32*) #1

declare dso_local i32 @fdfs_get_storage_ids_from_tracker_server(i32*) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
